--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 .container{
     display: flex;
     flex-wrap: wrap;
-    height:1000px;
-    width: 1000px;    
+    width: 960px;
+    outline: 2px black solid;    
 }
 
 .container div{
