--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@ header{
     color: #f9faf8;
 }
 
+header h1{
+    margin-bottom: 5px;
+}
+
+header p{
+    margin-top: 0;
+    color: #1f213f;
+}
+
 main{
     display: flex;
     justify-content: space-evenly;
